# libsignalsafe

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile
.github/workflows/: coverage.yml  main.yml
include/signalsafe/: file.hpp  memory.hpp  string.hpp  string.impl.hpp  time.hpp
source/: file.cpp  memory.cpp  time.cpp
test/: CMakeLists.txt
test/source/: file-test.cpp  libsignalsafe-test.cpp  memory-test.cpp  signalsafe-test.cpp  string-test-alt.cpp  string-test.cpp  time-test.cpp
